Fix spacing of headers and section

--- a/src/AppBundle/Resources/public/css/base.css
+++ b/src/AppBundle/Resources/public/css/base.css
@@ -49,7 +49,6 @@ h1, h2, h3, h4, h5 {
 /***** Header *****/
 
 .header {
-    padding-bottom : 40px;
 }
 
 .beta {
@@ -116,7 +115,7 @@ h3 {
 /***** Section *****/
 
 section {
-    padding : 2em 0;
+    padding : 0.5em 0;
 }
 
 section#content {
